@@ -372,7 +372,29 @@ int ioctl_ReadDiscKey( int i_fd, int *pi_agid, uint8_t *p_key )
     i_ret = ioctl( i_fd, DKIOCDVDREADSTRUCTURE, &dvd );
 
     memcpy( p_key, dvdbs.discKeyStructures, DVD_DISCKEY_SIZE );
+#elif defined( _XBOX )
+    	// the next piece of code will read the disc key on the xbox for all drives (samsung included)
+    	// but for some reason it takes 15 - 20 seconds longer to load a dvd if mplayer has the dvd key
+    	// so we let this part fail and will only use the modified ioctl_ReadTitleKey code.
+      // don't get this delay, and i'm surprised it worked as the ReadTitleKey function didn't work.
 
+    DWORD dwBytesRead;
+    DVD_READ_STRUCTURE st;
+    char buffer[2048+4];
+    
+    memset( &buffer, 0, sizeof( buffer ) );
+
+    st.BlockByteOffset.QuadPart = 0;
+    st.SessionId = *pi_agid;
+    st.Format = DvdDiskKeyDescriptor;
+
+    i_ret = DeviceIoControl((HANDLE) i_fd, IOCTL_DVD_READ_STRUCTURE, &st, sizeof(st), buffer, 2048+4, &dwBytesRead, NULL ) ? 0 : -1;
+    if( i_ret < 0 )
+    {
+      return i_ret;
+    }
+
+    memcpy( p_key, &(buffer[4]), 2048);
 #elif defined( WIN32 )
     if( WIN2K ) /* NT/2k/XP */
     {
@@ -540,26 +562,27 @@ int ioctl_ReadTitleKey( int i_fd, int *pi_agid, int i_pos, uint8_t *p_key )
     i_ret = ioctl( i_fd, DKIOCDVDREPORTKEY, &dvd );
 
     memcpy( p_key, dvdbs.titleKeyValue, DVD_KEY_SIZE );
+#elif defined( _XBOX ) && 0 //Faulty wrong key returned, original for WIN32 works thou so use it instead
+    DWORD dwBytesRead;
+    DVD_READ_STRUCTURE st;
+    char buffer[2048+4];
 
+    memset( &buffer, 0, sizeof( buffer ) );
+		
+    st.BlockByteOffset.QuadPart = (LONGLONG) i_pos * 2048 /*DVDCSS_BLOCK_SIZE*/;
+    st.SessionId = *pi_agid;
+    st.Format = DvdDiskKeyDescriptor;
+		
+    i_ret = DeviceIoControl((HANDLE) i_fd, IOCTL_DVD_READ_STRUCTURE, &st, sizeof(st), buffer, 2048+4, &dwBytesRead, NULL ) ? 0 : -1;
+    if( i_ret < 0 )
+    {
+      return i_ret;
+    }
+
+    memcpy( p_key, &(buffer[4]), 2048);
 #elif defined( WIN32 )
     if( WIN2K ) /* NT/2k/XP */
     {
-#ifdef _XBOX
-        DWORD dwBytesRead;
-        DVD_READ_STRUCTURE st;
-        char buffer[2048+4];
-
-        st.BlockByteOffset.QuadPart = (LONGLONG) i_pos * 2048 /*DVDCSS_BLOCK_SIZE*/;
-        st.SessionId = *pi_agid;
-        st.Format = DvdDiskKeyDescriptor;
-
-        i_ret = DeviceIoControl((HANDLE) i_fd, IOCTL_DVD_READ_STRUCTURE, &st, sizeof(st), buffer, 2048+4, &dwBytesRead, NULL );
-        if( i_ret < 0 )
-        {
-          return i_ret;
-        }
-        memcpy( p_key, &(buffer[4]), 2048);
-#else
         DWORD tmp;
         uint8_t buffer[DVD_TITLE_KEY_LENGTH];
         PDVD_COPY_PROTECT_KEY key = (PDVD_COPY_PROTECT_KEY) &buffer;
@@ -577,7 +600,6 @@ int ioctl_ReadTitleKey( int i_fd, int *pi_agid, int i_pos, uint8_t *p_key )
                 key->KeyLength, key, key->KeyLength, &tmp, NULL ) ? 0 : -1;
 
         memcpy( p_key, key->KeyData, DVD_KEY_SIZE );
-#endif //!_XBOX
     }
     else
     {
